Fixing Artist page spacing

--- a/CIS102w ver 2/MainCss.css
+++ b/CIS102w ver 2/MainCss.css
@@ -167,17 +167,24 @@ h2 {
 }
 
 /** table sizing for the space between the shows**/
+.table0{
+	margin-left: 230px;
+}
+
 .table1{
 	margin-top: 100px;
+	margin-right: 230px;
 }
 
 .table2{
-	margin-top: 150px;
+	margin-top: 110px;
+	margin-left: 230px;
 }
 
 .table3{
 	margin-top: 200px;
-    margin-bottom: 50px;
+    	margin-bottom: 50px;
+	margin-right: 230px;
 }
 
 
